@@ -59,8 +59,10 @@
         <a tal:define="
           section python:section_title[0];
           title python:section_title[1];"
-          tal:attributes="href string:#tab-${section}"
-          tal:content="title">
+          tal:attributes="
+            href string:#tab-${section};
+            class string:tab-${section};">
+          <span tal:content="title" />
         </a>
       </li>
     </ul>
